--- a/UK.Rmd
+++ b/UK.Rmd
@@ -1,301 +1,256 @@
 ---
-title: "SCA_SS19_Fallstudie"
-output: html_document
+title: "SCA_SS19_Gruppe201_HA"
+author: "NMR, JAZ"
+date: "5/21/2019"
+output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Laden von Packages
-```{r, message=FALSE, warning=FALSE}
+
+<!--##############################################-->
+# Pr1: Daten Vorbereiten
+<!--##############################################-->
+
+## PR1: Laden der Daten und Libarys in R:
+```{r}
+# Laden der Transaktionsdaten
+transactions = read.csv2("output_transactions_8Players_v0005.csv")
+transactions$Period = paste(sprintf('%02d', transactions$Year %% 100), sprintf("%02d", c(transactions$Month)), sep = "",  collapse = NULL)
+
+# Laden der Servicedaten
+services = read.csv2("output_services_8Players_v0005.csv")
+services$Period = paste(sprintf('%02d', services$Year %% 100), sprintf("%02d", c(services$Month)), sep = "",  collapse = NULL)
+
+# Laden der Kostendaten
+costs = read.csv2("output_cost_8Players_v0005.csv")
+# Einbau von Periodvariable
+costs$Period = paste(sprintf('%02d', costs$Year %% 100), sprintf("%02d", c(costs$Month)), sep = "",  collapse = NULL)
+
+#Laden der Libarys
 library("zoo")
 library("forecast")
 library("ggplot2")
+require(scales)
 ```
+
+### PR1: (1) Sales je Monat je Region
+```{r}
+Sales = aggregate(Sales ~ Period+region, data= subset(transactions, Period<='1902'),sum)
+Sales
+```
+### PR1: (2) Sales Long --> Wide
+```{r}
+WideSales = reshape(Sales, idvar = "Period", timevar = "region", direction = "wide")
+WideSales
+```
+### PR1: (3) Time Series
+```{r}
+WideSales$Sales.Japan = ts(WideSales$Sales.Japan, frequency=12 )
+WideSales$Sales.Peking = ts(WideSales$Sales.Peking, frequency=12 )
+WideSales$Sales.Phlppn = ts(WideSales$Sales.Phlppn, frequency=12 )
+WideSales$Sales.Shangh = ts(WideSales$Sales.Shangh, frequency=12 )
+WideSales$Sales.Skorea = ts(WideSales$Sales.Skorea, frequency=12 )
+#Nachlieferungen bereits bei (1) entfernt durch Auschluss Period 1903
+```
+
+<!--##############################################-->
+# Pr1: Modellierung vorbereiten
+<!--##############################################-->
+
+### PR1: (4) Visualisierung NF Japan 
+
+#Begründung:???????????????????????????????????????????????????????
 
 ```{r}
-transactions = read.csv2("Paketone.csv")
+library(ggplot2)
+require(scales)
 
-str(transactions)
+ggplot(WideSales, aes(x=Period, y=Sales.Japan, group =1)) + geom_line()+theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
+### PR1: (5) Z-Transformation
+```{r}
+#Z-transformed SalesJapan201
+WideSales$Sales.Japan201 = ts(reshape(aggregate(Sales ~ Period+region, data= subset(transactions, Period<='1902'&Product=='Gruppe201'),sum), idvar = "Period", timevar = "region", direction = "wide")$Sales.Japan, frequency = 12)
 
-summary(transactions)
+WideSales$ZSales.Japan201 = (WideSales$Sales.Japan201-mean(WideSales$Sales.Japan201))/sd(WideSales$Sales.Japan201)
+WideSales$ZSales.Japan201
+
+#Z-transformed SalesJapanTotal
+WideSales$ZSales.Japan = 
+  (WideSales$Sales.Japan-mean(WideSales$Sales.Japan))/sd(WideSales$Sales.Japan)
+WideSales$ZSales.Japan
+
+#Visualisierung
+ggplot(WideSales)+ 
+  geom_line( aes(x = Period, y=ZSales.Japan, group =1, colour ='Z-Sales_total'))+
+  geom_line( aes(x = Period, y=ZSales.Japan201, group =1,colour='Z-Sales_201'))+
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
+### PR1: (6) Distance
+```{r}
+WideSales$ZSales.Japan_distance= WideSales$ZSales.Japan-WideSales$ZSales.Japan201
+
+ggplot(WideSales, aes(x=Period, y=ZSales.Japan_distance, group =1)) + geom_line()+theme(axis.text.x = element_text(angle = 90, hjust = 1))+ylim(-3, 3) + geom_hline(yintercept=0, color = "red")
 ```
 
+### PR1: (7) Jaccard
+```{r}
+WideSales$deltaJpn[1] = 1
+WideSales$deltaJpn201[1] = 1
+for (i in 2:62)
+{
+  if (WideSales$Sales.Japan[i]>WideSales$Sales.Japan[i-1])
+  {
+WideSales$deltaJpn[i] = 1}
+else {WideSales$deltaJpn[i] = 0}
+}
 
-# Berechnung eines Dataframes mit dem Absatz der verschiedenen Produktgruppen im Vereinigten Königreich
+for (i in 2:62)
+{
+  if (WideSales$Sales.Japan201[i]>WideSales$Sales.Japan201[i-1])
+  {
+WideSales$deltaJpn201[i] = 1}
+else {WideSales$deltaJpn201[i] = 0}
+}
+WideSales$deltaJpn
+WideSales$deltaJpn201
+
+#Jaccard Abstand
+WideSales$deltaDiff = WideSales$deltaJpn - WideSales$deltaJpn201
+WideSales$deltaDiff
+
+ggplot(WideSales, aes(x= Period,y =deltaDiff))+geom_bar(stat='identity')+scale_x_discrete(labels = abbreviate)+theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
+Die Verwendung der Nachfragevorhersage des Gesamtmarktes als Grundlage der Vorhersage fuer unsere Produkte erachten wir als sinnvoll, da
+sowohl der Trend als auch die Saisonalität eine starke Übereinstimmung aufweist. Dies lässt sich insbesondere anhand der normierten Z-Sales erkennen. Trotz keiner 100% Übereinstimmung ist die Differenz beider Z-Sales relativ gering woraufhin auf eine starke Korrelation geschlossen werden kann.
+
+<!--##############################################-->
+# Pr1: Modellierung
+<!--##############################################-->
+
+### PR1: (8) Modelle Japan
+Fehlertyp/Level(alpha) + Trend(beta) +Saisonalität(gamma)
+Insbesondere die Saisonalität ist anhand der vorherigen Beobachtungen als deutlich ausgeprägt zu erkennen. 
+Der Trend hingegen ist kaum ausgeprägt, da über den 5 Jahres Intervall nur ein sehr leichter Rückgang der Sales zu erkennen ist. Daher werden die initialen Modell Parameter auf ANA gesetzt. Ein Versuch den Trend innerhalb des Modells zu beachten wird dennoch unternommen.
+#(auffindbar in Aufgabe 4/5
+Als Orientierung bzgl. der Anpassung der Iterationen dient uns insbesondere der MAPE.
+-1 Iteration: Reduktion glättungparameter--> führt zu höherer Genauigkeit
+-2 Iteration: Fehlertyp auf multiplakiv --> führt zu höherer Genauigkeit
+-3 Iteration: (MAM)--> unwesentlich schlechtere Fehlerquote, daher wieder zurück und den Trend auf NONE setzen
+-4 Iteration: MNM--> führt zu bester, wenn auch nur leicht besserer Fehlerquote, als MNA
 
 ```{r}
+###Modelle für Sales Japan
+#Forecast1 Japan 
+fcast1_Jpn = forecast(ets(WideSales$Sales.Japan, model = "ANA", alpha = 0.1, beta = 0.1, gamma = 0.1))
+fcast1_Jpn$x
+fcast1_Jpn$residuals
+print(paste('SD_Residuals=',sd(as.numeric(fcast1_Jpn$residuals))))
+#fcast1_Jpn$fitted
+#FC1_Jpn$mean
 
-# Aggregierung der Verkäufe in der UK je Periode + Produktgruppe, dabei gleichzeitig Bereinigung um 
-# negative Werte
+#Forecast2 Japan
+fcast2_Jpn = forecast(ets(WideSales$Sales.Japan, model = "ANA", alpha = 0.1, beta = 0.01, gamma = 0.01))
+#Forecast3 Japan
+fcast3_Jpn = forecast(ets(WideSales$Sales.Japan, model = "MNA", alpha = 0.01, beta = 0.01, gamma = 0.01))
+#Forecast4 Japan
+fcast4_Jpn = forecast(ets(WideSales$Sales.Japan, model = "MAM", alpha = 0.01, beta = 0.01, gamma = 0.01))
+#Forecast5 Japan
+fcast5_Jpn = forecast(ets(WideSales$Sales.Japan, model = "MNM", alpha = 0.01, beta = 0.01, gamma = 0.01))
 
-gb = aggregate(Menge ~ AccountingMonth + Gruppe, data = subset(transactions, Menge > 0 & Land == "Vereinigtes Königreich"), sum)
+###Fehler-Bewertung
+#MAE
+print(paste('MAE_fc1=',mean(abs(as.numeric(fcast1_Jpn$residuals)))))
+print(paste('MAE_fc2=',mean(abs(as.numeric(fcast2_Jpn$residuals)))))
+print(paste('MAE_fc3=',mean(abs(as.numeric(fcast3_Jpn$residuals)))))
+print(paste('MAE_fc4=',mean(abs(as.numeric(fcast4_Jpn$residuals)))))
+print(paste('MAE_fc5=',mean(abs(as.numeric(fcast5_Jpn$residuals)))))
+#MSE
+print(paste('MSE_fc1=',mean(as.numeric(fcast1_Jpn$residuals)^2)))
+print(paste('MSE_fc2=',mean(as.numeric(fcast2_Jpn$residuals)^2)))
+print(paste('MSE_fc3=',mean(as.numeric(fcast3_Jpn$residuals)^2)))
+print(paste('MSE_fc4=',mean(as.numeric(fcast4_Jpn$residuals)^2)))
+print(paste('MSE_fc5=',mean(as.numeric(fcast5_Jpn$residuals)^2)))
+#MAPE
+print(paste('MAPE_fc1=',mean(abs((as.numeric(fcast1_Jpn$residuals)/as.numeric(fcast1_Jpn$x))*100))))
+print(paste('MAPE_fc2=',mean(abs((as.numeric(fcast2_Jpn$residuals)/as.numeric(fcast2_Jpn$x))*100))))
+print(paste('MAPE_fc3=',mean(abs((as.numeric(fcast3_Jpn$residuals)/as.numeric(fcast3_Jpn$x))*100))))
+print(paste('MAPE_fc4=',mean(abs((as.numeric(fcast4_Jpn$residuals)/as.numeric(fcast4_Jpn$x))*100))))
+print(paste('MAPE_fc5=',mean(abs((as.numeric(fcast5_Jpn$residuals)/as.numeric(fcast5_Jpn$x))*100))))
+```
+### PR1: (9) Modelle Rest-Regionen 
+```{r}
+fcast1_Pkng = forecast(ets(WideSales$Sales.Peking, model = "ZZZ"),1)
+fcast1_Phlppn = forecast(ets(WideSales$Sales.Phlppn, model = "ZZZ"),1)
+fcast1_Shangh = forecast(ets(WideSales$Sales.Shangh, model = "ZZZ"),1)
+fcast1_Skorea = forecast(ets(WideSales$Sales.Skorea, model = "ZZZ"),1)
+fcast6_Japan = forecast(ets(WideSales$Sales.Japan, model = "ZZZ"),1)
 
-# Konvertierung von uk im long format ins wide format
-
-gbwide = reshape(gb, timevar = "Gruppe", idvar = "AccountingMonth", direction = "wide")
-
-# Sortierung anhand des AccountingMonths (aufsteigend)
-
-gbwide = gbwide[order(gbwide$AccountingMonth),]
-
-# Bereinigung des Dataframes ukwide um die aus der Konvertierung resultierenden NAs
-
-gbwide[is.na(gbwide)] = 0
-
-# Konvertierung der Daten in das Time-Series Format
-
-#gbwide$Menge.1 = ts(gbwide$Menge.1, frequency = 12)
-#gbwide$Menge.3 = ts(gbwide$Menge.3, frequency = 12)
-#gbwide$Menge.5 = ts(gbwide$Menge.5, frequency = 12)
-#gbwide$Menge.7 = ts(gbwide$Menge.7, frequency = 12)
-
-# Ausgabe des neuen Dataframes
-
-gbwide
+print(paste('MAPE_Pkng=',mean(abs((as.numeric(fcast1_Pkng$residuals)/as.numeric(fcast1_Pkng$x))*100))))
+print(paste('MAPE_Phlppn=',mean(abs((as.numeric(fcast1_Phlppn$residuals)/as.numeric(fcast1_Phlppn$x))*100))))
+print(paste('MAPE_Skorea=',mean(abs((as.numeric(fcast1_Skorea$residuals)/as.numeric(fcast1_Skorea$x))*100))))
+print(paste('MAPE_Shangh=',mean(abs((as.numeric(fcast1_Shangh$residuals)/as.numeric(fcast1_Shangh$x))*100))))
 
 ```
+Das Modell für Peking ist am präzisesten da hierbei der MAPE am geringsten ausfällt
 
-
-# 1. Explorative visuelle Datenanalyse für den Absatz in UK
-
+### PR1: (10) Forcast Gesamt Nachfrage March 6 (1903)
 ```{r}
 
-ggplot(gbwide, aes(x = AccountingMonth, y = as.numeric(Menge.1), ymin = 0, ymax = 20), group = 1) + geom_line() + theme(axis.text.x = element_text(angle = 90))
+fcast1_Pkng
+fcast1_Phlppn
+fcast1_Shangh
+fcast1_Skorea
 
-ggplot(gbwide, aes(x = AccountingMonth, y = as.numeric(Menge.3), ymin = 0, ymax = 250), group = 1) + geom_line() + theme(axis.text.x = element_text(angle = 90))
-
-ggplot(gbwide, aes(x = AccountingMonth, y = as.numeric(Menge.5), ymin = 0, ymax = 20), group = 1) + geom_line() + theme(axis.text.x = element_text(angle = 90))
-
-ggplot(gbwide, aes(x = AccountingMonth, y = as.numeric(Menge.7), ymin = 0, ymax = 20), group = 1) + geom_line() + theme(axis.text.x = element_text(angle = 90))
-
-#ggplot(gbwide, aes(x = gbwide$AccountingMonth, ymin = (0), ymax = 250)) + 
-  
-  #geom_line(aes(y = gbwide$Menge.1, group = 1, colour = "Menge 1")) +
-
-  #geom_line(aes(y = gbwide$Menge.3, group = 1, colour = "Menge 3")) +
-  
-  #geom_line(aes(y = gbwide$Menge.5, group = 1, colour = "Menge 5")) +
-  
-  #geom_line(aes(y = gbwide$Menge.7, group = 1, colour = "Menge 7")) +
-
-  #theme(axis.text.x = element_text(angle = 90))
+#Summe
+forecast(ets(WideSales$Sales.Peking+WideSales$Sales.Japan+WideSales$Sales.Phlppn+WideSales$Sales.Shangh+WideSales$Sales.Skorea, model = "ZZZ"),1)
 
 ```
 
+<!--##############################################-->
+# Pr1: Entscheidung
+<!--##############################################-->
 
-# Berechnung der durchschnittlichen monatlichen Nachfragen je Produkt, um damit Ausreißer / Großaufträge besser 
-# bestimmen zu können
-# Def. Großauftrag: Überschreitet durchschnittliche monatliche Nachfrage
+### PR1: (11) Marktanteil im Februar Gesamtmarkt
 
+````{r}
+
+# Dataframe, welches aus der vorherigen Dataframe die Sales nach den Regionen summiert 
+SalesRegion201 = tapply(subset(transactions, Product == "Gruppe201"&Period =="1902")$Sales, subset(transactions, Product == "Gruppe201"&Period=="1902")$region, sum)
+
+#Neues Dataframe, welches für alle Gruppe die Sales nach Regionen summiert
+SalesRegion = tapply(subset(transactions, Period=="1902")$Sales, subset(transactions, Period=="1902")$region, sum)
+
+#Ausgaben von Anteil an Verkäufen unserer Gruppe. Auf "-1" verzichtet, da mit Kommazahl anschaulicher. 
+salesanteile = SalesRegion201/SalesRegion
+salesanteile
+
+````
+
+### PR1: (12) Prognose Marktanteile
+
+````{r}
+print(paste('ForecastJpn_1903=',fcast6_Japan$mean*salesanteile[1]))
+print(paste('ForecastPkng_1903=',fcast1_Pkng$mean*salesanteile[2]))
+print(paste('ForecastPhlppn_1903=',fcast1_Phlppn$mean*salesanteile[3]))
+print(paste('ForecastShangh_1903=',fcast1_Shangh$mean*salesanteile[4]))
+print(paste('ForecastSkorea_1903=',fcast1_Skorea$mean*salesanteile[5]))
+````
+### PR1: (13) weiter Analyse für Rahmenverträge
 ```{r}
+#Demand Forecast Gruppe201 inkl. Puffer (aufgrund Warehousing Schwund)
+fcast13_Japan = forecast(ets(WideSales$Sales.Japan, model = "ZZZ"),6)$mean*salesanteile[1]*1.12
+fcast13_Pkng = forecast(ets(WideSales$Sales.Peking, model = "ZZZ"),6)$mean*salesanteile[2]*1.12
+fcast13_Phlppn = forecast(ets(WideSales$Sales.Phlppn, model = "ZZZ"),6)$mean*salesanteile[3]*1.12
+fcast13_Shangh = forecast(ets(WideSales$Sales.Shangh, model = "ZZZ"),6)$mean*salesanteile[4]*1.12
+fcast13_Skorea = forecast(ets(WideSales$Sales.Skorea, model = "ZZZ"),6)$mean*salesanteile[5]*1.12
 
-summary(gbwide)
-
-```
+cbind(fcast13_Japan,fcast13_Pkng, fcast13_Phlppn, fcast13_Shangh, fcast13_Skorea)
 
 
-# Es erscheint nicht sinnvoll, Menge.1 sowie Menge.7 von Großaufträgen gemäß oben stehender Definition zu befreien,
-# da das arithmetische Mittel bereits kleiner 1 ist (und nicht weniger als 1 verkauft werden kann). 
-# Auch bei Menge 5 gibt es viele Monate, insbesondere am Anfang des Datenbereichs, welche sich auf 0 belaufen. 
-# Eine sinnvolle Bereinigung um Großaufträge kann also nur über Exklusion dieser Monate erreicht werden.
-# Hier also noch eine Analyse, wie die durchschnittliche Nachfrage in Monaten mit Nachfrage > 0 war:
-
-```{r}
-
-MengeEins = subset(gbwide, Menge.1 > 0)
-
-paste0("Menge 1: ",mean(MengeEins$Menge.1))
-
-# Aus Gründen der Vollständigkeit auch noch der Durchschnitt von Menge 3
-
-paste0("Menge 3: ", mean(gbwide$Menge.3))
-
-MengeFuenf = subset(gbwide, Menge.5 > 0)
-
-paste0("Menge 5: ", mean(MengeFuenf$Menge.5))
-
-MengeSieben = subset(gbwide, Menge.7 > 0)
-
-paste0("Menge 7: ", mean(MengeSieben$Menge.7))
 
 ```
-
-
-# Jetzt Anzeige aller als Großaufträge definierter Einträge in Transactions
-
-```{r}
-
-l_transactionsEins = subset(transactions, Land == "Vereinigtes Königreich" & Gruppe == "1" & Menge > mean(MengeEins$Menge.1))
-
-l_transactionsEins
-
-l_transactionsDrei = subset(transactions, Land == "Vereinigtes Königreich" & Gruppe == "3" & Menge > mean(gbwide$Menge.3))
-
-l_transactionsDrei
-
-l_transactionsFuenf = subset(transactions, Land == "Vereinigtes Königreich" & Gruppe == "5" & Menge > mean(MengeFuenf$Menge.5))
-
-l_transactionsFuenf
-
-l_transactionsSieben = subset(transactions, Land == "Vereinigtes Königreich" & Gruppe == "7" & Menge > mean(MengeSieben$Menge.7))
-
-l_transactionsSieben
-```
-
-
-# Bereinigung um die zuvor identifizierten Werte 
-# Keine wiederkehrenden Großaufträge erkannt, daher Löschung bei 3 und 5
-# Löschung bei 1 und 7 nicht wirklich sinnvoll, da nicht wirklich Großaufträge
-
-
-```{r}
-
-row_to_delete = which((transactions$Menge > mean(gbwide$Menge.3) & transactions$Gruppe == "3") | (transactions$Menge > mean(MengeFuenf$Menge.5) & transactions$Gruppe == "5"))
-
-transactions = transactions[-row_to_delete,]
-
-rm(row_to_delete)
-
-```
-
-
-# Long -> wide des neuen bereinigten Dataframes
-
-```{r}
-# Aggregierung der Verkäufe in der UK je Periode + Produktgruppe, dabei gleichzeitig Bereinigung um 
-# negative Werte
-
-gb = aggregate(Menge ~ AccountingMonth + Gruppe, data = subset(transactions, Menge > 0 & Land == "Vereinigtes Königreich"), sum)
-
-# Konvertierung von uk im long format ins wide format
-
-gbwide = reshape(gb, timevar = "Gruppe", idvar = "AccountingMonth", direction = "wide")
-
-# Sortierung anhand des AccountingMonths (aufsteigend)
-
-gbwide = gbwide[order(gbwide$AccountingMonth),]
-
-# Bereinigung des Dataframes ukwide um die aus der Konvertierung resultierenden NAs
-
-gbwide[is.na(gbwide)] = 0
-
-# Konvertierung der Daten in das Time-Series Format
-
-#gbwide$Menge.1 = ts(gbwide$Menge.1, frequency = 12)
-#gbwide$Menge.3 = ts(gbwide$Menge.3, frequency = 12)
-#gbwide$Menge.5 = ts(gbwide$Menge.5, frequency = 12)
-#gbwide$Menge.7 = ts(gbwide$Menge.7, frequency = 12)
-
-# Ausgabe des neuen Dataframes
-
-gbwide
-```
-
-
-# 2. Explorative visuelle Datenanalyse für den Absatz in UK
-
-```{r}
-
-ggplot(gbwide, aes(x = AccountingMonth, y = as.numeric(Menge.1), ymin = 0, ymax = 20), group = 1) + geom_line() + theme(axis.text.x = element_text(angle = 90))
-
-ggplot(gbwide, aes(x = AccountingMonth, y = as.numeric(Menge.3), ymin = 0, ymax = 250), group = 1) + geom_line() + theme(axis.text.x = element_text(angle = 90))
-
-ggplot(gbwide, aes(x = AccountingMonth, y = as.numeric(Menge.5), ymin = 0, ymax = 20), group = 1) + geom_line() + theme(axis.text.x = element_text(angle = 90))
-
-ggplot(gbwide, aes(x = AccountingMonth, y = as.numeric(Menge.7), ymin = 0, ymax = 20), group = 1) + geom_line() + theme(axis.text.x = element_text(angle = 90))
-
-```
-
-
-# 201711 hat extrem hohen Wert für Menge.3, also Überprüfung
-
-```{r}
-
-subset(transactions, Land == "Vereinigtes Königreich" & Gruppe == "3" & AccountingMonth == "201711")
-
-```
-
-
-# An dieser Stelle sind auffällig viele Aufträge (4) mit Menge 25 und fortlaufenden Bestellnummern zu sehen,
-# was darauf hindeutet, dass es sich hierbei nur um einen Auftrag mit der Menge 100 handelt.
-# Dieser würde gemäß Definition als Großauftrag klassifiziert werden und bereinigt werden müssen. 
-# Eine Analyse der anderen Monate mit hohen Bestellmengen sollte vorher durchgeführt werden, sollte es sich hierbei
-# um einen wiederkehrenden Großauftrag handeln. 
-# Das sind die Perioden 201311, 201601, 201901, 201903 
-
-```{r}
-
-subset(transactions, Land == "Vereinigtes Königreich" & Gruppe == "3" & (AccountingMonth == "201711" | AccountingMonth == "201311" | AccountingMonth == "201601" | AccountingMonth == "201901" | AccountingMonth == "201903"))
-
-```
-
-
-# Weder ist das gleiche Muster von Bestellungen wie in 2017-11 zu sehen, noch scheint es ein Muster von 
-# Großaufträgen zu sehen. Bereinigung deshalb nur um die vorher identifizierten Werte.
-
-```{r}
-
-row_to_delete = which(transactions$Menge == "25" & transactions$Gruppe == "3" & transactions$AccountingMonth == "201711")
-
-transactions = transactions[-row_to_delete,]
-
-rm(row_to_delete)
-
-subset(transactions, Land == "Vereinigtes Königreich" & Gruppe == "3" & AccountingMonth == "201711")
-
-```
-
-
-# Long -> wide des neuen bereinigten Dataframes
-
-```{r}
-# Aggregierung der Verkäufe in der UK je Periode + Produktgruppe, dabei gleichzeitig Bereinigung um 
-# negative Werte
-
-gb = aggregate(Menge ~ AccountingMonth + Gruppe, data = subset(transactions, Menge > 0 & Land == "Vereinigtes Königreich"), sum)
-
-# Konvertierung von uk im long format ins wide format
-
-gbwide = reshape(gb, timevar = "Gruppe", idvar = "AccountingMonth", direction = "wide")
-
-# Sortierung anhand des AccountingMonths (aufsteigend)
-
-gbwide = gbwide[order(gbwide$AccountingMonth),]
-
-# Bereinigung des Dataframes ukwide um die aus der Konvertierung resultierenden NAs
-
-gbwide[is.na(gbwide)] = 0
-
-# Konvertierung der Daten in das Time-Series Format
-
-#gbwide$Menge.1 = ts(gbwide$Menge.1, frequency = 12)
-#gbwide$Menge.3 = ts(gbwide$Menge.3, frequency = 12)
-#gbwide$Menge.5 = ts(gbwide$Menge.5, frequency = 12)
-#gbwide$Menge.7 = ts(gbwide$Menge.7, frequency = 12)
-
-# Ausgabe des neuen Dataframes
-
-gbwide
-```
-
-
-# 3. Explorative visuelle Datenanalyse für den Absatz in UK
-
-```{r}
-
-ggplot(gbwide, aes(x = AccountingMonth, y = as.numeric(Menge.1), ymin = 0, ymax = 20), group = 1) + geom_line() + theme(axis.text.x = element_text(angle = 90))
-
-ggplot(gbwide, aes(x = AccountingMonth, y = as.numeric(Menge.3), ymin = 0, ymax = 250), group = 1) + geom_line() + theme(axis.text.x = element_text(angle = 90))
-
-ggplot(gbwide, aes(x = AccountingMonth, y = as.numeric(Menge.5), ymin = 0, ymax = 20), group = 1) + geom_line() + theme(axis.text.x = element_text(angle = 90))
-
-ggplot(gbwide, aes(x = AccountingMonth, y = as.numeric(Menge.7), ymin = 0, ymax = 20), group = 1) + geom_line() + theme(axis.text.x = element_text(angle = 90))
-
-```
-
-
-
-
 
