--- a/GIT_Clone.Rmd
+++ b/GIT_Clone.Rmd
@@ -5,6 +5,12 @@ date: "5/31/2019"
 output: pdf_document
 ---
 
+##### Latest changes: https://github.com/marinustau/SCACasestudy/pull/3/commits/d24e941d740d693c714537fd580fdc6cfebe7c9f
+
+
+
+
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
